--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,15 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Rajdhani:500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Rajdhani:300,500&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Rajdhani:500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Rajdhani:300,500&display=swap"); */
 
 
-@font-face {
+/* @font-face {
   font-family: "Rajdhani", sans-serif;
   font-weight: 100 900;
   font-display: swap;
   font-style: normal;
   font-named-instance: 'Regular';
   src: url("https://fonts.googleapis.com/css?family=Rajdhani:500&display=swap");
-}
+} */
 
 @font-face {
     font-family: 'Inter var';
